--- a/designs.html
+++ b/designs.html
@@ -3,29 +3,75 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Designs - Boutique Tailoring</title>
+  <title>Designs - The Stitch Story</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <!-- Header -->
   <header>
     <nav class="navbar">
       <div class="logo">The Stitch Story</div>
-      <ul></ul> <!-- Navbar links will be filled dynamically by navbar.js -->
+      <ul></ul>
     </nav>
   </header>
 
+  <!-- Designs Section -->
   <section class="designs-section">
-    <h2 id="categoryTitle">Our Designs</h2>
+    <h2 id="categoryTitle"></h2>
     <div class="designs-container" id="designsContainer">
-      <!-- Designs will be dynamically injected -->
+      <!-- Designs will be injected here -->
     </div>
   </section>
 
+  <!-- Footer -->
   <footer>
-    <p>© 2025 The Stitch Story| Designed with ❤️ | <a href="contact.html">Contact Us</a></p>
+    <p>© 2025 The Stitch Story | Designed with ❤️ | <a href="contact.html">Contact Us</a></p>
   </footer>
 
+  <!-- Scripts -->
   <script src="js/navbar.js"></script>
-  <script src="js/designs.js"></script>
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      const category = JSON.parse(localStorage.getItem('selectedCategory'));
+      const designsContainer = document.getElementById('designsContainer');
+      const categoryTitle = document.getElementById('categoryTitle');
+
+      if (!category) {
+        designsContainer.innerHTML = '<p style="text-align:center;">No category selected.</p>';
+        return;
+      }
+
+      categoryTitle.innerText = category.name;
+
+      const allDesigns = JSON.parse(localStorage.getItem('designs')) || [];
+
+      // ✅ Match by category name instead of ID
+      const designs = allDesigns.filter(d => d.category === category.name);
+
+      designsContainer.innerHTML = '';
+
+      if (designs.length === 0) {
+        designsContainer.innerHTML = '<p style="text-align:center;">No designs available for this category.</p>';
+        return;
+      }
+
+      designs.forEach(design => {
+        const card = document.createElement('div');
+        card.classList.add('design-card');
+        card.innerHTML = `
+          <img src="${design.image}" alt="${design.name}">
+          <h3>${design.name}</h3>
+          <p>(${design.category})</p>
+          <button onclick="bookDesign('${design.name}')">Book This Design</button>
+        `;
+        designsContainer.appendChild(card);
+      });
+    });
+
+    function bookDesign(designName) {
+      localStorage.setItem('selectedDesign', designName);
+      window.location.href = 'booking.html';
+    }
+  </script>
 </body>
 </html>
